# ManhuntRIBber

./: .clang-format  CMakeLists.txt  README.md  adpcm_codec.cpp  adpcm_codec.h  adpcm_decoder.cpp  adpcm_decoder.h  byteswap.h  codec.cpp  codec.h  main.cpp  manhuntribber_version.h.in
.github/workflows/: build.yml
tests/: CMakeLists.txt  complex.rib  gs-16b-1c-44100hz.rib  gs-16b-2c-22050hz.rib  gs-16b-2c-44100hz.rib  rib_tests.cpp
